instructions.InstructionsDrawG.scala.error
Compilation error:
InstructionsDrawG:4: error: unclosed comment
backward() /* le jeu est trop top /*
           ^InstructionsDrawG:4: error: unclosed comment
backward() /* le jeu est trop top /*
           ^InstructionsDrawG:4: error: unclosed comment
backward() /* le jeu est trop top /*
           ^InstructionsDrawG:4: error: unclosed comment
backward() /* le jeu est trop top /*
           ^InstructionsDrawG:1: error: Missing closing brace `}' assumed here
right()
^InstructionsDrawG:1: error: Missing closing brace `}' assumed here
right()
^InstructionsDrawG:1: error: expected class or object definition
right()
^InstructionsDrawG:2: error: expected class or object definition
brushDown()
^InstructionsDrawG:3: error: expected class or object definition
backward()
^InstructionsDrawG:4: error: expected class or object definition
backward() /* le jeu est trop top /*
^InstructionsDrawG:4: error: unclosed comment
backward() /* le jeu est trop top /*
           ^