instructions.InstructionsDrawG.scala.code
right()
brushDown()
backward()
backward() /* le jeu est trop top /*
backward()
backward()

left()
backward()
backward()
backward()
backward()

left()
backward()
backward()
backward()
backward()
right()
forward()
forward()
right()
backward()